Fri May 26 14:34:28 1995  J.T. Conklin  <jtc@rtl.cygnus.com>

	* entries.c (Entries_Open): Renamed from ParseEntries; changed to
	  process Entries Log files left over from previous crashes or
	  aborted runs.
	  (Entries_Close): New function, write out Entries file if
	  neccessary and erase Log file.  
	  (Register): Append changed records to Log file instead of
	  re-writing file.
	  (fgetentent): New function, parse one Entry record from a file.
	  (AddEntryNode): It's no longer an error for two records with the
	  same name to be added to the list.  New records replace older
	  ones.
	* cvs.h (Entries_Open, Entries_Close): Add prototypes.
	  (CVSADM_ENTLOG): New constant, name of Entries Log file.
	* add.c, checkout.c, client.c, find_names.c, recurse.c: Use
	  Entries_Open()/Entries_Close() instead of ParseEntries()/dellist().

	* add.c, admin.c, checkout.c, client.c, commit.c, diff.c,
	  history.c, import.c, log.c, patch.c, release.c, remove.c,
	  rtag.c, server.c, status.c, tag.c, update.c: Changed
	  conditionals so that return value of *printf is tested less than
	  0 instead of equal to EOF.

Thu May 25 08:30:12 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* subr.c (xmalloc): Never try to malloc zero bytes; if the user
	asks for zero bytes, malloc one instead.

Wed May 24 12:44:25 1995  Ken Raeburn  <raeburn@cujo.cygnus.com>

	* subr.c (xmalloc): Don't complain about NULL if zero bytes were
	requested.

Tue May 16 21:49:05 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

	* subr.c (xmalloc): Never try to malloc zero bytes; if the user
	asks for zero bytes, malloc one instead.

Mon May 15 14:35:11 1995  J.T. Conklin  <jtc@rtl.cygnus.com>

	* lock.c (L_LOCK_OWNED): Removed.

	* add.c, checkout.c, client.c, create_adm.c, cvs.h, entries.c,
	  find_names.c modules.c, recurse.c, release.c, repos.c, update.c:
	  removed CVS 1.2 compatibility/upgrade code.

Mon May  8 11:25:07 1995  J.T. Conklin  <jtc@rtl.cygnus.com>
